# ROS2-bag-recorder

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
bag_session_manager/: arm_disarm_bag_session_manager.py
config/: bag_recorder.yaml
launch/: bag_recorder.launch.py
ros2_bag_recorder/: bag_session_manager.py
